--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       };
   
       try {
-        const response = await fetch('http://chrystyan.ddns.com.br:3000/api/inserir-pesquisa', {
+        const response = await fetch('http://189.39.123.58:3000/api/inserir-pesquisa', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
